Worked on index.html page

--- a/index.html
+++ b/index.html
@@ -2,23 +2,47 @@
 <html>
   <head>
      <meta charset="utf-8">
+     <link rel="stylesheet" href="style.css">
+     <link href="https://fonts.googleapis.com/css?family=Rubik+Mono+One" rel="stylesheet">
      <title></title>
   </head>
   <body>
-    <nav>
-    <section>
-        <img src="https://github.com/codefellows/seattle-201d20/blob/master/class-06-dom-objects-domain_modeling/lab/assets/salmon.png?raw=true"/>
-    </section>
-      <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
-    </nav>
-
-    <section></section>
-    <section></section>
-    <section></section>
+      <div id="wrapper">
+        <div id="header">
+          <div id="storename"><h1 id="pat">Pat's</h1><h2 id="salmon">Salmon</h2><h3 id="cookies">Cookies</h3></div>
+            <img id="logo" src="https://github.com/codefellows/seattle-201d20/blob/master/class-06-dom-objects-domain_modeling/lab/assets/salmon.png?raw=true"/>
+            <div id="navbar">
+              <ul>
+                <li class="navlistitems">Home</li>
+                <li class="navlistitems">About Us</li>
+                <li class="navlistitems">Merchandise</li>
+                <li class="navlistitems">Events</li>
+              </ul>
+            </div>
+        </div>
+        <div id="container">
+          <img id="family" src="https://github.com/codefellows/seattle-201d20/blob/master/class-09-css_wireframe_part_1/lab/assets/family.jpg?raw=true"/>
+          <h2 id="welcomeheader">Enter Welcome Message</h2>
+          <img id="colorfulfish" src="https://github.com/codefellows/seattle-201d20/blob/master/class-09-css_wireframe_part_1/lab/assets/fish.jpg?raw=true"/>
+          <p id="welcomemessage"> Tell the user about the company. sdlfkjasd;lfkjsadlfkjdslfkjsdalkfj. sdlfkjasdflkjsadf;lksjadflkjsd. saldkfjasdl;fkjasdl;kfjsal;dkfj. asldfkjasd;lfkjsadl;fkj<p>
+          <div id="content">
+            <div class="clear">
+              <h4 class="contentheadline">About Us</h4>
+              <img class="contentimg" src="https://github.com/codefellows/seattle-201d20/blob/master/class-09-css_wireframe_part_1/lab/assets/frosted-cookie.jpg?raw=true"/>
+              <p class="contentsection"><p>
+            </div>
+            <div class="clear">
+              <h4 class="contentheadline">Merchandise</h4>
+              <img class="contentimg" src="https://github.com/codefellows/seattle-201d20/blob/master/class-09-css_wireframe_part_1/lab/assets/shirt.jpg?raw=true"/>
+              <p class="contentsection"><p>
+            </div>
+            <div class="clear">
+              <h4 class="contentheadline">Events</h4>
+              <img class="contentimg" src="https://github.com/codefellows/seattle-201d20/blob/master/class-09-css_wireframe_part_1/lab/assets/chinook.jpg?raw=true"/>
+              <p class="contentsection"><p>
+            </div>
+          </div>
+      </div>
 
      <script src="app.js" charset="utf-8"></script>
    </body>
