More positioning of elements in css

--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
         <div id="container">
           <img id="family" src="https://github.com/codefellows/seattle-201d20/blob/master/class-09-css_wireframe_part_1/lab/assets/family.jpg?raw=true"/>
           <h2 id="welcomeheader">Enter Welcome Message</h2>
-          <img id="colorfulfish" src="https://github.com/codefellows/seattle-201d20/blob/master/class-09-css_wireframe_part_1/lab/assets/fish.jpg?raw=true"/>
           <p id="welcomemessage"> Tell the user about the company. sdlfkjasd;lfkjsadlfkjdslfkjsdalkfj. sdlfkjasdflkjsadf;lksjadflkjsd. saldkfjasdl;fkjasdl;kfjsal;dkfj. asldfkjasd;lfkjsadl;fkj<p>
           <div id="content">
             <div class="clear">
@@ -39,9 +38,57 @@
             <div class="clear">
               <h4 class="contentheadline">Events</h4>
               <img class="contentimg" src="https://github.com/codefellows/seattle-201d20/blob/master/class-09-css_wireframe_part_1/lab/assets/chinook.jpg?raw=true"/>
-              <p class="contentsection"><p>
+              <p class="contentsection">Upcoming Salmon Events in the Area</p>
+                <ul>
+                  <li class="eventslink">
+                    <a href="http://www.salmondays.org/">Issaquah Salmon Days</a>
+                  </li>
+                  <li class=eventslink>
+                    <a href="http://www.nwsalmonderbyseries.com/derbies/">Northwest Salmon Derby Series</a>
+                  </li>
+                </ul>
+              <p>
             </div>
           </div>
+      </div>
+      <div id="footer">
+        <img id="cutter" src="https://github.com/codefellows/seattle-201d20/blob/master/class-09-css_wireframe_part_1/lab/assets/cutter.jpeg?raw=true"/>
+        <div class="locations">
+          <p class="locationfields">First and Pike,&nbsp;</p>
+          <p class="locationfields">101 Pike Street,&nbsp;</p>
+          <p class="locationfields">Seattle, WA,&nbsp;</p>
+          <p class="locationfields">6am-9pm,&nbsp;</p>
+          <p class="locationfields">(206) 555-1212</p>
+
+        <div class="locations">
+          <p class="locationfields">SeaTac Airport,&nbsp;</p>
+          <p class="locationfields">201 International Boulevard,&nbsp;</p>
+          <p class="locationfields">SeaTac, WA,&nbsp;</p>
+          <p class="locationfields">6am-9pm,&nbsp;</p>
+          <p class="locationfields">(206) 555-1212</p>
+
+        <div class="locations">
+          <p class="locationfields">Seattle Center,&nbsp;</p>
+          <p class="locationfields">201 Denny Way,&nbsp;</p>
+          <p class="locationfields">Seattle, WA,&nbsp;</p>
+          <p class="locationfields">6am-9pm,&nbsp;</p>
+          <p class="locationfields">(206) 555-1213</p>
+        </div>
+        <div class="locations">
+          <p class="locationfields">Capitol Hill,&nbsp;</p>
+          <p class="locationfields">201 Broadway Avenue,&nbsp;</p>
+          <p class="locationfields">Seattle, WA,&nbsp;</p>
+          <p class="locationfields">6am-9pm,&nbsp;</p>
+          <p class="locationfields">(206) 555-1214</p>
+        </div>
+        <div class="locations">
+          <p class="locationfields">Alki,&nbsp;</p>
+          <p class="locationfields">501 Main Street,&nbsp;</p>
+          <p class="locationfields">Seattle, WA,&nbsp;</p>
+          <p class="locationfields">6am-9pm,&nbsp;</p>
+          <p class="locationfields">(206) 555-1215</p>
+        </div>
+        <img id="colorfulfish" src="https://github.com/codefellows/seattle-201d20/blob/master/class-09-css_wireframe_part_1/lab/assets/fish.jpg?raw=true"/>
       </div>
 
      <script src="app.js" charset="utf-8"></script>
