--- a/index.html
+++ b/index.html
@@ -13,30 +13,46 @@
             <img id="logo" src="https://github.com/codefellows/seattle-201d20/blob/master/class-06-dom-objects-domain_modeling/lab/assets/salmon.png?raw=true"/>
             <div id="navbar">
               <ul>
-                <li class="navlistitems">Home</li>
-                <li class="navlistitems">About Us</li>
-                <li class="navlistitems">Merchandise</li>
-                <li class="navlistitems">Events</li>
+                <li class="navlistitems">
+                  <a class="navlinks" href="#welcomeheader">Home</a>
+                </li>
+                <li class="navlistitems">
+                  <a class="navlinks" href="#about">About Us</a>
+                </li>
+                <li class="navlistitems">
+                  <a class="navlinks" href="#merch">Merchandise</a>
+                </li>
+                <li class="navlistitems">
+                  <a class="navlinks" href="#events">Events</a>
+                </li>
               </ul>
             </div>
         </div>
         <div id="container">
           <img id="family" src="https://github.com/codefellows/seattle-201d20/blob/master/class-09-css_wireframe_part_1/lab/assets/family.jpg?raw=true"/>
-          <h2 id="welcomeheader">Enter Welcome Message</h2>
-          <p id="welcomemessage"> Tell the user about the company. sdlfkjasd;lfkjsadlfkjdslfkjsdalkfj. sdlfkjasdflkjsadf;lksjadflkjsd. saldkfjasdl;fkjasdl;kfjsal;dkfj. asldfkjasd;lfkjsadl;fkj<p>
+          <h2 id="welcomeheader">WELCOME</h2>
+          <p id="welcomemessage"> Welcome to the online home of Seattle's legendary Pat's Salmon Cookies.  Pat's currently have five locations in the Seattle area, and we are rapidly expanding.  While you here, be sure to check on upcoming events in the area and check out the Pat's merchandise that is available for sale.<p>
           <div id="content">
             <div class="clear">
               <h4 class="contentheadline">About Us</h4>
               <img class="contentimg" src="https://github.com/codefellows/seattle-201d20/blob/master/class-09-css_wireframe_part_1/lab/assets/frosted-cookie.jpg?raw=true"/>
-              <p class="contentsection"><p>
+              <p class="contentsection" id="about">Pat's Salmon cookies was founded in 2016 when our founder was tinkering with his famous cookie recipe on a cold and gray Seattle day. The result was something distinctly Seattle: salmon shaped cookies that are actually made with real salmon!<p>
             </div>
             <div class="clear">
-              <h4 class="contentheadline">Merchandise</h4>
+              <h4 class="contentheadline" id="merch">Merchandise</h4>
               <img class="contentimg" src="https://github.com/codefellows/seattle-201d20/blob/master/class-09-css_wireframe_part_1/lab/assets/shirt.jpg?raw=true"/>
-              <p class="contentsection"><p>
+              <p class="contentsection">
+                Items for sale include:
+                <ul>
+                  <li class="listsaleitems">T-shirts</li>
+                  <li class="listsaleitems">Mugs</li>
+                  <li class="listsaleitems">Stickers</li>
+                  <li class="listsaleitems">and much more...</li>
+                </ul>
+              </p>
             </div>
             <div class="clear">
-              <h4 class="contentheadline">Events</h4>
+              <h4 class="contentheadline" id="events">Events</h4>
               <img class="contentimg" src="https://github.com/codefellows/seattle-201d20/blob/master/class-09-css_wireframe_part_1/lab/assets/chinook.jpg?raw=true"/>
               <p class="contentsection">Upcoming Salmon Events in the Area</p>
                 <ul>
