Added matching styling to sales.html file

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
       <div id="wrapper">
         <div id="header">
-          <div id="storename"><h1 id="pat">Pat's</h1><h2 id="salmon">Salmon</h2><h3 id="cookies">Cookies</h3></div>
+          <div id="cookiestorename"><h1 id="pat">Pat's</h1><h2 id="salmon">Salmon</h2><h3 id="cookies">Cookies</h3></div>
             <img id="logo" src="https://github.com/codefellows/seattle-201d20/blob/master/class-06-dom-objects-domain_modeling/lab/assets/salmon.png?raw=true"/>
             <div id="navbar">
               <ul>
