--- a/sales.html
+++ b/sales.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title></title>
+     <meta charset="utf-8">
+     <link rel="stylesheet" href="style.css">
+     <link href="https://fonts.googleapis.com/css?family=Rubik+Mono+One" rel="stylesheet">
+     <title></title>
   </head>
   <body>
-
-    <img src="https://github.com/codefellows/seattle-201d20/blob/master/class-06-dom-objects-domain_modeling/lab/assets/salmon.png?raw=true"/>
-
+      <div id="wrapper">
+        <div id="header">
+          <div id="cookiestorename"><h1 id="pat">Pat's</h1><h2 id="salmon">Salmon</h2><h3 id="cookies">Cookies</h3></div>
+            <img id="logo" src="https://github.com/codefellows/seattle-201d20/blob/master/class-06-dom-objects-domain_modeling/lab/assets/salmon.png?raw=true"/>
+            <div id="navbar">
+            </div>
+          </div>
+        </div>
     <form method="get" id="fishform">
         <fieldset>
 
@@ -35,7 +42,7 @@
         </fieldset>
     </form>
 
-
     <script src="app.js" charset="utf-8"></script>
+    <div id="salesfooter"></div>
   </body>
 </html>
