--- a/sales.html
+++ b/sales.html
@@ -42,7 +42,7 @@
         </fieldset>
     </form>
 
+    <div id="tablefootid"></div>
     <script src="app.js" charset="utf-8"></script>
-    <div id="salesfooter"></div>
   </body>
 </html>
