--- a/sales.html
+++ b/sales.html
@@ -41,6 +41,7 @@
 
         </fieldset>
     </form>
+    <div id="table-div"></div>
     <script src="app.js" charset="utf-8"></script>
   </body>
 </html>
